--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--__________________UPDATE CURSO-->
-        <activity android:name=".activities.UpdateCursoActivity"
-            android:theme="@style/AppTheme.TemaPopup">
-        </activity>
+
+        <!-- __________________UPDATE CURSO -->
+        <activity
+            android:name=".activities.UpdateCursoActivity"
+            android:theme="@style/AppTheme.TemaPopup" />
         <activity
             android:name=".activities.NavDrawerActivity"
             android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <!-- ________________LOGIN________________ -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- ________________LOGIN________________ -->
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name">
@@ -37,7 +37,19 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+        </activity> <!-- __________________Mantenimiento Profesores___________________ -->
+        <activity android:name=".activities.MantenimientoProfesorActivity">
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>  <!-- __________________Update Profesores___________________ -->
+        <activity
+            android:name=".activities.UpdateProfesorActivity">
+            android:theme="@style/AppTheme.TemaPopup"
         </activity>
+
+
     </application>
 
 </manifest>
