--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".activities.NavDrawerActivity"
             android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme.NoActionBar" /> <!-- ________________LOGIN________________ -->
+            android:theme="@style/AppTheme.NoActionBar" />
+        <!-- ________________LOGIN________________ -->
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name">
@@ -30,26 +31,27 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- ________________MANTENIMIENTO CURSOS________________ -->
-        <activity
-            android:name=".activities.MantenimientoCursoActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <!-- ________________MANTENIMIENTO CURSOS________________ -->
+        <activity android:name=".activities.MantenimientoCursoActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-        </activity> <!-- __________________Mantenimiento Profesores___________________ -->
-        <activity android:name=".activities.MantenimientoProfesorActivity">
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-        </activity>  <!-- __________________Update Profesores___________________ -->
-        <activity
-            android:name=".activities.UpdateProfesorActivity">
-            android:theme="@style/AppTheme.TemaPopup"
         </activity>
 
-
+        <!-- __________________Mantenimiento Profesores___________________ -->
+        <activity android:name=".activities.MantenimientoProfesorActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
+        <!-- __________________Update Profesores___________________ -->
+        <activity
+            android:name=".activities.UpdateProfesorActivity"
+            android:theme="@style/AppTheme.TemaPopup">
+        </activity>
     </application>
 
 </manifest>
